--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@netlify/functions": "^0.10.0",
     "@remix-run/netlify": "^1.3.3",
     "@remix-run/react": "^1.3.3",
+    "@sanity/client": "^3.3.0",
     "cross-env": "^7.0.3",
+    "groq": "^2.29.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.3.3"
