--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/netlify": "^1.3.3",
     "@remix-run/react": "^1.3.3",
     "@sanity/client": "^3.3.0",
+    "picosanity": "^3.0.3",
     "cross-env": "^7.0.3",
     "groq": "^2.29.3",
     "react": "^17.0.2",
